Fixed only one burger when viewed on small devices

--- a/LexiconLMS/Client/wwwroot/css/app.css
+++ b/LexiconLMS/Client/wwwroot/css/app.css
@@ -388,5 +388,6 @@ button.btn.btn-danger {
         button.nav-link.btn.btn-outline-primary {
             box-shadow: none !important;
             color: rgba(0, 0, 0, 0.5) !important;
+            border: none !important;
         }
 }
